src/objects/Version_Map__mdt.object
<CustomObject>
    <fields>
        <fullName>BlockCustomerKey__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Block Customer Key</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Build_Versions__c</fullName>
        <description>Contains all versions of the cd key could relate to (ex: 2019 and 2019 update 1 call the same cd key generator)</description>
        <label>Build Versions</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Employee_Key__c</fullName>
        <label>Employee Key</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Latest_KeyGen__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Latest KeyGen</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LockedKey__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Locked Key</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Map_To_Previous_SKU__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Map To Previous SKU</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OEM_Generator_Active__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Available Version - OEM Generator - Active key</description>
        <label>OEM Generator Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OEM_Version_Display__c</fullName>
        <description>Display of version</description>
        <label>OEM Version Display</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sequence__c</fullName>
        <label>Sequence</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Version_ID__c</fullName>
        <label>Version ID</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Version Map</label>
    <listViews>
        <fullName>All_Fields</fullName>
        <columns>MasterLabel</columns>
        <columns>DeveloperName</columns>
        <columns>NamespacePrefix</columns>
        <columns>Version_ID__c</columns>
        <columns>LockedKey__c</columns>
        <columns>Map_To_Previous_SKU__c</columns>
        <columns>Sequence__c</columns>
        <filterScope>Everything</filterScope>
        <label>All Fields</label>
        <language>en_US</language>
    </listViews>
    <pluralLabel>Version Map</pluralLabel>
</CustomObject>